--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="container">
             <nav>
                 <a href="index.html" class="logo">
-                    <img src="assets/pictura.png" alt="Pictura Creations" style="height: 130px; object-fit: contain;">
+                    <img src="assets/pictura.png" alt="Pictura Creations" style="height: 90px; object-fit: contain;">
                 </a>
 
                 <ul class="nav-links" id="nav-links">
@@ -73,62 +73,62 @@
     </section>
 
     <!-- Services Preview -->
-    <!-- Services Preview (Horizontal Accordion) -->
+    <!-- Services Preview (Tilted Accordion) -->
     <section id="services-preview" class="services-section">
         <div class="container-fluid">
-            <div class="section-title" style="margin-bottom: 2rem;">
+            <div class="section-title" style="margin-bottom: 3rem;">
                 <h2>Our Expertise</h2>
                 <span></span>
             </div>
 
-            <div class="accordion-wrapper">
+            <div class="tilted-wrapper">
                 <!-- Item 1 -->
-                <div class="accordion-item active"
-                    style="background-image: url('https://images.unsplash.com/photo-1554080353-a576cf803bda?auto=format&fit=crop&w=800&q=80');">
-                    <div class="accordion-overlay"></div>
-                    <div class="accordion-content">
-                        <span class="service-num">01</span>
+                <div class="tilted-item active"
+                    style="background-image: url('https://images.unsplash.com/photo-1516035069371-29a1b244cc32?auto=format&fit=crop&w=800&q=80');">
+                    <div class="tilted-overlay"></div>
+                    <div class="tilted-content">
+                        <div class="tilted-tag">Capture</div>
                         <h3>Photography</h3>
-                        <p>Capturing moments with precision and artistry.</p>
-                        <a href="services.html" class="explore-btn"><i class="fas fa-arrow-right"></i></a>
                     </div>
+                    <span class="tilted-num">01</span>
                 </div>
 
                 <!-- Item 2 -->
-                <div class="accordion-item"
-                    style="background-image: url('https://images.unsplash.com/photo-1579126038374-6064e9370f0f?auto=format&fit=crop&w=800&q=80');">
-                    <div class="accordion-overlay"></div>
-                    <div class="accordion-content">
-                        <span class="service-num">02</span>
+                <div class="tilted-item"
+                    style="background-image: url('https://images.unsplash.com/photo-1601506521937-0121a7fc2a6b?auto=format&fit=crop&w=800&q=80');">
+                    <div class="tilted-overlay"></div>
+                    <div class="tilted-content">
+                        <div class="tilted-tag">Motion</div>
                         <h3>Videography</h3>
-                        <p>Cinematic storytelling in motion.</p>
-                        <a href="services.html" class="explore-btn"><i class="fas fa-arrow-right"></i></a>
                     </div>
+                    <span class="tilted-num">02</span>
                 </div>
 
                 <!-- Item 3 -->
-                <div class="accordion-item"
-                    style="background-image: url('https://images.unsplash.com/photo-1557804506-669a67965ba0?auto=format&fit=crop&w=800&q=80');">
-                    <div class="accordion-overlay"></div>
-                    <div class="accordion-content">
-                        <span class="service-num">03</span>
-                        <h3>Brand Identity</h3>
-                        <p>Defining your visual legacy.</p>
-                        <a href="services.html" class="explore-btn"><i class="fas fa-arrow-right"></i></a>
+                <div class="tilted-item"
+                    style="background-image: url('https://images.unsplash.com/photo-1534670007418-fbb7f6cf32c3?auto=format&fit=crop&w=800&q=80');">
+                    <div class="tilted-overlay"></div>
+                    <div class="tilted-content">
+                        <div class="tilted-tag">Identity</div>
+                        <h3>Brand Design</h3>
                     </div>
+                    <span class="tilted-num">03</span>
                 </div>
 
                 <!-- Item 4 -->
-                <div class="accordion-item"
+                <div class="tilted-item"
                     style="background-image: url('https://images.unsplash.com/photo-1506947411487-a56738267384?auto=format&fit=crop&w=800&q=80');">
-                    <div class="accordion-overlay"></div>
-                    <div class="accordion-content">
-                        <span class="service-num">04</span>
+                    <div class="tilted-overlay"></div>
+                    <div class="tilted-content">
+                        <div class="tilted-tag">Elevate</div>
                         <h3>Aerial Cinema</h3>
-                        <p>Perspectives from above.</p>
-                        <a href="services.html" class="explore-btn"><i class="fas fa-arrow-right"></i></a>
                     </div>
+                    <span class="tilted-num">04</span>
                 </div>
+            </div>
+
+            <div style="text-align:center; margin-top:3rem;">
+                <a href="services.html" class="btn btn-outline">Explore All</a>
             </div>
         </div>
     </section>
