Add film roll separator and fix mobile service card ratios

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/services_hover.css">
+    <link rel="stylesheet" href="css/film_roll.css">
 </head>
 
 <body>
@@ -71,6 +72,15 @@
             </div>
         </div>
     </section>
+
+    <!-- Film Roll Separator -->
+    <div class="film-roll-container">
+        <div class="film-roll-track">
+            <!-- Repeating frames -->
+            <div class="film-roll-content"></div>
+            <div class="film-roll-content"></div>
+        </div>
+    </div>
 
     <!-- Services Preview -->
     <!-- Services Preview (Tilted Accordion) -->
