Update contact details: Location, Phone, Email and Social Links

--- a/contact.html
+++ b/contact.html
@@ -172,7 +172,7 @@
                         <div class="info-icon"><i class="fas fa-phone-alt"></i></div>
                         <div class="info-text">
                             <h3>Phone</h3>
-                            <p>+1 (555) 123-4567</p>
+                            <p>+44 7950 399421</p>
                         </div>
                     </div>
 
@@ -180,7 +180,7 @@
                         <div class="info-icon"><i class="fas fa-envelope"></i></div>
                         <div class="info-text">
                             <h3>Email</h3>
-                            <p>hello@picturacreations.com</p>
+                            <p>hello@picturacreations.co.uk</p>
                         </div>
                     </div>
 
@@ -188,7 +188,7 @@
                         <div class="info-icon"><i class="fas fa-map-marker-alt"></i></div>
                         <div class="info-text">
                             <h3>Location</h3>
-                            <p>123 Creative Studio, Media City, NY</p>
+                            <p>London, United Kingdom</p>
                         </div>
                     </div>
 
@@ -197,6 +197,24 @@
                         <div class="info-text">
                             <h3>WhatsApp</h3>
                             <p>+44 7950 399421</p>
+                        </div>
+                    </div>
+
+                    <div class="info-item">
+                        <div class="info-icon"><i class="fab fa-instagram"></i></div>
+                        <div class="info-text">
+                            <h3>Instagram</h3>
+                            <p><a href="https://www.instagram.com/pictura.creations?igsh=ZHBiMjF5MjdkZmZo&utm_source=qr"
+                                    target="_blank" style="color: var(--text-muted);">@pictura.creations</a></p>
+                        </div>
+                    </div>
+
+                    <div class="info-item">
+                        <div class="info-icon"><i class="fab fa-youtube"></i></div>
+                        <div class="info-text">
+                            <h3>YouTube</h3>
+                            <p><a href="https://www.youtube.com/@PicturaCreations" target="_blank"
+                                    style="color: var(--text-muted);">@PicturaCreations</a></p>
                         </div>
                     </div>
                 </div>
