--- a/index.html
+++ b/index.html
@@ -218,14 +218,15 @@
                 <div class="footer-col">
                     <h3>Contact Us</h3>
                     <ul class="footer-links">
-                        <li><i class="fas fa-envelope"></i> hello@picturacreations.com</li>
-                        <li><i class="fas fa-phone"></i> +1 (555) 123-4567</li>
-                        <li><i class="fas fa-map-marker-alt"></i> 123 Creative Studio, Media City</li>
+                        <li><i class="fas fa-envelope"></i> hello@picturacreations.co.uk</li>
+                        <li><i class="fas fa-phone"></i> +44 7950 399421</li>
+                        <li><i class="fas fa-map-marker-alt"></i> London, United Kingdom</li>
                     </ul>
                     <div class="social-links" style="margin-top: 1.5rem;">
                         <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
+
+                        <a href="https://www.youtube.com/@PicturaCreations" target="_blank"><i
+                                class="fab fa-youtube"></i></a>
                         <a href="https://wa.me/447950399421" target="_blank"><i class="fab fa-whatsapp"></i></a>
                     </div>
                 </div>
