--- a/contact.html
+++ b/contact.html
@@ -126,6 +126,10 @@
         .whatsapp-float:hover {
             transform: scale(1.1);
         }
+
+        .contact-info a:hover {
+            color: var(--primary-color) !important;
+        }
     </style>
 </head>
 
@@ -172,7 +176,9 @@
                         <div class="info-icon"><i class="fas fa-phone-alt"></i></div>
                         <div class="info-text">
                             <h3>Phone</h3>
-                            <p>+44 7950 399421</p>
+                            <p><a href="tel:+447950399421"
+                                    style="color: var(--text-muted); text-decoration: none; transition: color 0.3s;">+44
+                                    7950 399421</a></p>
                         </div>
                     </div>
 
@@ -180,23 +186,21 @@
                         <div class="info-icon"><i class="fas fa-envelope"></i></div>
                         <div class="info-text">
                             <h3>Email</h3>
-                            <p>hello@picturacreations.co.uk</p>
+                            <p><a href="mailto:hello@picturacreations.co.uk"
+                                    style="color: var(--text-muted); text-decoration: none; transition: color 0.3s;">hello@picturacreations.co.uk</a>
+                            </p>
                         </div>
                     </div>
 
-                    <div class="info-item">
-                        <div class="info-icon"><i class="fas fa-map-marker-alt"></i></div>
-                        <div class="info-text">
-                            <h3>Location</h3>
-                            <p>London, United Kingdom</p>
-                        </div>
-                    </div>
+
 
                     <div class="info-item">
                         <div class="info-icon"><i class="fab fa-whatsapp"></i></div>
                         <div class="info-text">
                             <h3>WhatsApp</h3>
-                            <p>+44 7950 399421</p>
+                            <p><a href="https://wa.me/447950399421" target="_blank"
+                                    style="color: var(--text-muted); text-decoration: none; transition: color 0.3s;">+44
+                                    7950 399421</a></p>
                         </div>
                     </div>
 
@@ -209,14 +213,7 @@
                         </div>
                     </div>
 
-                    <div class="info-item">
-                        <div class="info-icon"><i class="fab fa-youtube"></i></div>
-                        <div class="info-text">
-                            <h3>YouTube</h3>
-                            <p><a href="https://www.youtube.com/@PicturaCreations" target="_blank"
-                                    style="color: var(--text-muted);">@PicturaCreations</a></p>
-                        </div>
-                    </div>
+
                 </div>
 
                 <!-- Form -->
@@ -247,11 +244,7 @@
             </div>
 
             <!-- Map -->
-            <div class="map-container">
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d193595.15830869428!2d-74.119763973046!3d40.69766374874431!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c24fa5d33f083b%3A0xc80b8f06e177fe62!2sNew%20York%2C%20NY%2C%20USA!5e0!3m2!1sen!2s!4v1645564756836!5m2!1sen!2s"
-                    width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-            </div>
+
         </div>
     </section>
 
