Restore design.png background to the entire home page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link rel="stylesheet" href="css/film_roll.css">
 </head>
 
-<body>
+<body class="home-page">
 
     <!-- Topographical Background Overlay -->
     <div class="topo-bg"></div>
