Add and Refine Preloader Animation: Reveal, Move, and Timing Tweaks

--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
 
 <body class="home-page">
 
+    <!-- Preloader Overlay -->
+    <div id="intro-overlay">
+        <div class="intro-logo-container">
+            <img src="assets/pictura.png" alt="Pictura Creations" id="intro-logo">
+        </div>
+    </div>
+
     <!-- Topographical Background Overlay -->
     <div class="topo-bg"></div>
 
@@ -33,7 +40,8 @@
         <div class="container">
             <nav>
                 <a href="index.html" class="logo">
-                    <img src="assets/pictura.png" alt="Pictura Creations" style="height: 90px; object-fit: contain;">
+                    <img src="assets/pictura.png" alt="Pictura Creations"
+                        style="height: 90px; object-fit: contain; opacity: 0; transition: opacity 0.5s;">
                 </a>
 
                 <ul class="nav-links" id="nav-links">
